--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -195,7 +195,7 @@
 	right: 0
 	background: #fff   
 	z-index: 1001
-	padding: 20px 0  
+	padding: 20px 20px 35px 20px
 	color: #07386F
 	font-size: 14px  
 	.sorry__close
@@ -205,7 +205,8 @@
 		+s(close1)
 		cursor: pointer
 	.sorry__in
-		margin: 1000px 
+		width: 100%
+		min-width: 800px  
 		max-width: 1280px 
 		margin: 0 auto 
 		p
